discussion/kv_engine/141352/141352_rev1_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-32670: Enhance BGFetcher to support fetching compressed values

Update the BGFetcher and KVStore::getMulti code to request that an
item is fetched in compressed form if possible, by expanding the
current boolean GetMetaOnly parameter to a ValueFilter ternary:
KEYS_ONLY, VALUE_COMPRESSED or VALUE_DECOMPRESSED.

Encapsulate the vb_bgfetch_item_ctx_t class so the logic of selecting
the filter for a given key is handled by the class itself - also
remove unnecessary logic which was setting the value / status of a
bgFetch through the `value` pointer multiple times.

Note this functionality is currently unused in the front-end -
bgFetches for value currently only uses VALUES_DECOMPRESSED.

Change-Id: I3d7b3ab1b09e1caab407051f7265ead47e20d245

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Dave Rigby
Date: 2020-12-02 12:56:16.000000000
Message: 
Uploaded patch set 1.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2020-12-02 13:22:26.000000000
Message: 
Patch Set 1: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/32282/ : FAILURE

Compile error at ..\kv_engine\engines\ep\tests\module_tests\kvstore_test.cc(593): error C2039: "__1": is not a member of "std" ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/32282/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/27823/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/engines/ep/tests/module_tests/kvstore_test.cc:593:25:
error: no member named "__1" in namespace "std"
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/27823/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/6031/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/tests/module_tests/kvstore_test.cc:593:25: error: no member named "__1" in namespace "std" [clang-diagnostic-error]
    kvstore->begin(std::__1::make_unique<TransactionContext>(vbid));
                        ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/6031/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/tests/module_tests/kvstore_test.cc:593:25:
error: no member named "__1" in namespace "std" [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/6031/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/7608/ : FAILURE

Compile error at [2020-12-02T13:21:03.396Z] ../kv_engine/engines/ep/tests/module_tests/kvstore_test.cc:593:25:
error: ?std::__1? has not been declared
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/7608/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/7492/ : FAILURE

Compile error at [2020-12-02T13:11:27.264Z] ../kv_engine/engines/ep/tests/module_tests/kvstore_test.cc:593:25:
error: ?std::__1? has not been declared
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/7492/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/7881/ : FAILURE

Compile error at [2020-12-02T13:22:07.221Z] ../kv_engine/engines/ep/tests/module_tests/kvstore_test.cc:593:25:
error: no member named "__1" in namespace "std"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/7881/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/15425/ : FAILURE

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/4565/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/6557/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
